[project]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = [
    {name = "HridayBhuta",email = "bhutahriday@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (<2.3.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
