[project]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = [
    {name = "HridayBhuta",email = "bhutahriday@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "numpy (<2.0.0)",
    "opencv-python (<4.11)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "pyrealsense2 (>=2.56.5.9235,<3.0.0.0)",
    "pynput (>=1.8.1,<2.0.0)",
    "screeninfo (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
